--- a/Project2/Karpool/images/KarPool_files/main.css
+++ b/Project2/Karpool/images/KarPool_files/main.css
@@ -3980,7 +3980,7 @@
 			transition-delay: 1.25s;
 			content: '';
 			display: block;
-			background-color: transparent;
+			background-color: #000;
 			height: 100%;
 			left: 0;
 			opacity: 0.45;
